--- a/package.json
+++ b/package.json
@@ -2,9 +2,17 @@
   "name": "serverless-slack-invite",
   "version": "1.0.0",
   "description": "A serverless service which gives you github badge and the ability to send Slack invites for public Slack workspaces.",
-  "main": "handler.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "lint": "eslint .",
+    "fix": "eslint --fix .",
+    "build": "babel src -d dist",
+    "contrib:add": "all-contributors add",
+    "contrib:generate": "all-contributors generate",
+    "contrib:check": "all-contributors check",
+    "prepack": "yarn clean && yarn build",
+    "clean": "rm -rf dist"
   },
   "keywords": [
     "slack",
@@ -12,23 +20,33 @@
     "invite",
     "serverless"
   ],
-  "author": "Siavash Bidgoly",
+  "author": "Top Hat Monocle Corp. <opensource@tophat.com>",
   "license": "ISC",
   "dependencies": {
     "aws-serverless-express": "^3.3.5",
-    "babel-core": "6.3.26",
-    "babel-eslint": "6.0.4",
-    "babel-polyfill": "6.3.14",
-    "babel-preset-es2015": "6.3.13",
-    "babel-register": "6.9.0",
     "body-parser": "1.10.2",
     "cors": "2.7.1",
     "email-regex": "1.0.0",
     "express": "4.15.4",
-    "gulp": "3.9.0",
-    "gulp-babel": "6.1.1",
-    "gulp-rimraf": "0.2.0",
     "hostenv": "1.0.1",
     "superagent": "3.6.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.1.5",
+    "@babel/core": "^7.1.6",
+    "@babel/preset-env": "^7.1.6",
+    "@babel/preset-react": "^7.0.0",
+    "all-contributors-cli": "^5.4.1",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^23.6.0",
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.7.0",
+    "eslint": "^5.9.0",
+    "eslint-config-prettier": "^3.3.0",
+    "eslint-plugin-prettier": "^3.0.0",
+    "eslint-plugin-react": "^7.11.1",
+    "immutable": "^4.0.0-rc.12",
+    "jest": "^23.6.0",
+    "prettier": "^1.15.2"
   }
 }
