--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "email-regex": "1.0.0",
     "express": "4.15.4",
     "hostenv": "1.0.1",
-    "superagent": "3.6.0"
+    "superagent": "3.6.0",
+    "vd": "^0.8.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.5",
