--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint-plugin-react": "^7.11.1",
     "immutable": "^4.0.0-rc.12",
     "jest": "^23.6.0",
-    "prettier": "^1.15.2"
+    "prettier": "^1.15.2",
+    "serverless-domain-manager": "^2.6.6"
   }
 }
