Added serverless to dev dependencies.

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "immutable": "^4.0.0-rc.12",
     "jest": "^23.6.0",
     "prettier": "^1.15.2",
+    "serverless": "^1.33.2",
     "serverless-domain-manager": "^2.6.6"
   }
 }
