--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "body-parser": "1.10.2",
     "cors": "2.7.1",
     "email-regex": "1.0.0",
-    "express": "4.15.4",
+    "express": "^4.16.4",
     "hostenv": "1.0.1",
-    "superagent": "3.6.0",
+    "superagent": "^4.0.0",
     "vd": "^0.8.2"
   },
   "devDependencies": {
