--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
 
       - run:
           name: Install Dependencies
-          command: yarn install
+          command: yarn install --frozen-lockfile
 
       - save_cache:
           paths:
