--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "aws-serverless-express": "^3.3.5",
     "body-parser": "1.10.2",
     "cors": "2.7.1",
-    "email-regex": "1.0.0",
     "express": "^4.16.4",
     "hostenv": "1.0.1",
     "superagent": "^4.0.0",
+    "validator": "^10.9.0",
     "vd": "^0.8.2"
   },
   "devDependencies": {
