Improved Slack integration

--- a/serverless.yml
+++ b/serverless.yml
@@ -32,6 +32,8 @@ provider:
   environment:
     SLACK_API_TOKEN: ${env:SLACK_API_TOKEN}
     SLACK_SUBDOMAIN: ${env:SLACK_SUBDOMAIN}
+    NOTIFICATION_USERNAME: ${env:NOTIFICATION_USERNAME}
+    NOTIFICATION_CHANNEL: ${env:NOTIFICATION_CHANNEL}
 
 functions:
   app:
