Added serverless-api-state plugin for serverless

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cors": "2.7.1",
     "express": "^4.16.4",
     "hostenv": "1.0.1",
+    "serverless-api-stage": "^1.4.0",
     "superagent": "^4.0.0",
     "validator": "^10.9.0",
     "vd": "^0.8.2"
