Circleci notify only on master branch

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -74,3 +74,9 @@ workflows:
           filters:
             branches:
               only: master
+
+experimental:
+  notify:
+    branches:
+      only:
+        - master
