--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "jest",
     "lint": "eslint .",
     "fix": "eslint --fix .",
+    "start": "PORT=3000 node dist/server.js",
     "build": "babel src -d dist",
+    "build:watch": "PORT=3000 babel-node src/server.js",
     "contrib:add": "all-contributors add",
     "contrib:generate": "all-contributors generate",
     "contrib:check": "all-contributors check",
@@ -33,13 +35,13 @@
     "vd": "^0.8.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.1.5",
-    "@babel/core": "^7.1.6",
-    "@babel/preset-env": "^7.1.6",
-    "@babel/preset-react": "^7.0.0",
+    "@babel/cli": "^7.7.7",
+    "@babel/core": "^7.7.7",
+    "@babel/node": "^7.7.7",
+    "@babel/preset-env": "^7.7.7",
+    "@babel/preset-react": "^7.7.4",
     "all-contributors-cli": "^5.4.1",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^23.6.0",
+    "babel-jest": "^24.9.0",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.7.0",
     "eslint": "^5.9.0",
@@ -47,7 +49,7 @@
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
     "immutable": "^4.0.0-rc.12",
-    "jest": "^23.6.0",
+    "jest": "^24.9.0",
     "prettier": "^1.15.2",
     "serverless": "^1.33.2",
     "serverless-domain-manager": "^2.6.6"
