docs: add yarn start and dev start commands

--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "test": "jest",
     "lint": "eslint .",
     "fix": "eslint --fix .",
-    "start": "PORT=3000 node dist/server.js",
+    "start": "node dist/server.js",
     "build": "babel src -d dist",
-    "build:watch": "PORT=3000 babel-node src/server.js",
+    "build:watch": "babel-node src/server.js",
     "contrib:add": "all-contributors add",
     "contrib:generate": "all-contributors generate",
     "contrib:check": "all-contributors check",
