--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,14 +2,9 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/node:chakracore-8.10.0
+      - image: circleci/node:10.16.0
     working_directory: ~/repo
     steps:
-      - run: sudo su -c 'echo "deb http://deb.debian.org/debian jessie-backports main" >> /etc/apt/sources.list'
-      - run: |
-          sudo rm -rf /var/lib/apt/lists/*
-          sudo apt-get update
-          sudo apt install -t jessie-backports  openjdk-8-jre-headless ca-certificates-java
       - checkout
 
       - restore_cache:
@@ -46,7 +41,7 @@ jobs:
 
   deploy:
     docker:
-      - image: circleci/node:chakracore-8.10.0
+      - image: circleci/node:10.16.0
     working_directory: ~/repo
     steps:
       - checkout
