--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "author": "Top Hat Monocle Corp. <opensource@tophat.com>",
   "license": "ISC",
   "dependencies": {
+    "@babel/runtime": "^7.8.3",
     "aws-serverless-express": "^3.3.5",
     "body-parser": "1.18.3",
     "cors": "2.8.5",
@@ -35,11 +36,11 @@
     "vd": "^0.8.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.7.7",
-    "@babel/core": "^7.7.7",
-    "@babel/node": "^7.7.7",
-    "@babel/preset-env": "^7.7.7",
-    "@babel/preset-react": "^7.7.4",
+    "@babel/cli": "^7.8.3",
+    "@babel/core": "^7.8.3",
+    "@babel/node": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
     "all-contributors-cli": "^5.4.1",
     "babel-jest": "^24.9.0",
     "enzyme": "^3.7.0",
